apep_0052/v2/REPLICATION.md
# Replication Package: apep_0212

This folder contains all code and data needed to replicate the analysis.

## Requirements

- Python 3.10+
- Required packages: See below (or `requirements.txt` if present)

```bash
pip install pandas numpy statsmodels matplotlib
```

## Data

Data is fetched from the Census PUMS API (no API key required for basic queries).

**Cached data files:**
- `analysis_panel.parquet`
- `cohort_specific_atts.csv`
- `cs_results.RData`
- `descriptive_results.RData`
- `descriptive_trends.csv`
- `event_study_data.csv`
- `het_partisanship_es.csv`
- `het_rurality_es.csv`
- `heterogeneity_results.RData`
- `honestdid_results.RData`
- `panel_balance.csv`
- `raw_acs_broadband_1yr.rds`
- `raw_acs_broadband_5yr.rds`
- `raw_acs_broadband_all.rds`
- `raw_acs_demographics.rds`
- `raw_counties_sf.rds`
- `raw_localview.rds`
- `raw_place_county_crosswalk.rds`
- `raw_places_sf.rds`
- `raw_presidential_county.rds`
- `raw_rucc.rds`
- `raw_states_sf.rds`
- `robustness_results.RData`
- `treatment_timing.csv`

## Code

**Scripts (run in order):**
- `00_packages.R`
- `01_fetch_data.R`
- `02_clean_data.R`
- `03_descriptive.R`
- `04_main_analysis.R`
- `05_robustness.R`
- `06_heterogeneity.R`
- `07_figures.R`
- `08_tables.R`
- `09_appendix.R`
- `did_patch.R`
- `fix_missing_figures.R`

## Replication Instructions

1. Install requirements:
   ```bash
   pip install pandas numpy statsmodels matplotlib
   # For R scripts: install.packages(c("did", "fixest", "ggplot2"))
   ```

2. Run the analysis scripts in order:
   ```bash
   cd code/
   # For Python scripts:
   python 01_fetch_data.py    # Downloads data
   python 02_analysis.py      # Runs main analysis
   python 03_figures.py       # Generates figures
   
   # For R scripts:
   Rscript 01_fetch_data.R
   Rscript 02_analysis.R
   Rscript 03_figures.R
   ```

3. Scripts are numbered in execution order (01_, 02_, etc.).

## Data Source

Census PUMS (Public Use Microdata Sample)
- API: https://api.census.gov/data/{YEAR}/acs/acs1/pums
- Documentation: https://www.census.gov/programs-surveys/acs/microdata.html
- No API key required for basic queries

## Notes

- Scripts may contain hardcoded paths that need adjustment
- Cached JSON files allow replication without re-downloading
- For full replication from scratch, delete JSON files and re-run fetch scripts

---
Generated by APEP publish_paper.py
